# ot-harjoitustyo

./: README.md
Projekti/: .env  .env.test  .gitignore  pyproject.toml  tasks.py
Projekti/Dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
Projekti/dokumentaatio/: arkitehtuuri.md  kayttoohje  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
Projekti/src/: config.py  database_connection.py  exercise.py  index.py
Projekti/src/database/: database_connection.py  database_methods.py  table_names.py  test-database.db  wordlists.db
Projekti/src/entities/: exercise.py  exercise_types.py
Projekti/src/services/: app_logic.py  csv_handler.py  database_methods.py  logic.py  table_getter.py  valid_entry_check.py
Projekti/src/tests/: exercise_test.py  test-csvfile.csv  test-csvfile.csv.save
Projekti/src/tests/database/: database_methods_test.py
Projekti/src/tests/entities/: exercise_test.py  exercise_types_test.py
Projekti/src/tests/services/: csv_handler_test.py  database_methods_test.py  logic_test.py  table_getter_test.py  valid_entry_check_test.py
Projekti/src/ui/: excercise_view.py  manage_lists_view.py  start_view.py  ui.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
