[tool.poetry]
name = "OhTe-projekti"
version = "0.1.0"
description = ""
authors = ["h4lk0 <jenni.e.halkola@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
pytest = "^6.2.5"
pylint = "^2.11.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
